# BasicShell

./: CMakeLists.txt  README.md  config.cpp  config.h  list.c  list.h  main.c  main.cpp  parser.cpp  parser.h
.github/workflows/: cmake-multi-platform.yml
